--- a/sci-libs/blas-atlas/ChangeLog
+++ b/sci-libs/blas-atlas/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/blas-atlas
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.16 2006/01/30 10:47:12 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.17 2006/02/02 16:23:03 markusle Exp $
+
+  02 Feb 2006; Markus Dittrich <markusle@gentoo.org>
+  blas-atlas-3.7.10.ebuild, blas-atlas-3.7.11.ebuild:
+  Switched from blas-config to eselect in pkg_postinst(). This fixes
+  bug #121284.
 
   30 Jan 2006; Bryan Østergaard <kloeri@gentoo.org
   blas-atlas-3.6.0-r1.ebuild:
