--- a/x11-plugins/wmmsens/ChangeLog
+++ b/x11-plugins/wmmsens/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/wmmsens
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmsens/ChangeLog,v 1.5 2005/11/11 09:34:27 s4t4n Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmsens/ChangeLog,v 1.6 2006/02/02 16:30:52 nelchael Exp $
+
+  02 Feb 2006; Krzysiek Pawlik <nelchael@gentoo.org> wmmsens-0.29.6.ebuild:
+  Fixed DEPEND for modular X.
 
   11 Nov 2005; Michele Noberasco <s4t4n@gentoo.org> wmmsens-0.29.6.ebuild:
   removed Artistic and INSTALL from dodoc.
