--- a/x11-plugins/wmsensormon/ChangeLog
+++ b/x11-plugins/wmsensormon/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/wmsensormon
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmsensormon/ChangeLog,v 1.15 2005/11/11 10:35:04 s4t4n Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmsensormon/ChangeLog,v 1.16 2006/02/02 16:33:13 nelchael Exp $
+
+  02 Feb 2006; Krzysiek Pawlik <nelchael@gentoo.org>
+  wmsensormon-1.2.1.ebuild:
+  Fixed DEPEND for modular X.
 
   11 Nov 2005; Michele Noberasco <s4t4n@gentoo.org> wmsensormon-1.2.1.ebuild:
   removed COPYING and INSTALL from dodoc.
