--- a/sys-fs/cryptsetup-luks/ChangeLog
+++ b/sys-fs/cryptsetup-luks/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/cryptsetup-luks
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/cryptsetup-luks/ChangeLog,v 1.19 2006/02/02 15:24:57 strerror Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/cryptsetup-luks/ChangeLog,v 1.20 2006/02/02 16:37:05 agriffis Exp $
+
+  02 Feb 2006; Aron Griffis <agriffis@gentoo.org>
+  cryptsetup-luks-1.0.1-r1.ebuild:
+  Mark 1.0.1-r1 stable on ia64
 
 *cryptsetup-luks-1.0.1-r2 (02 Feb 2006)
 
