--- a/x11-themes/gtk-engines-begtk/ChangeLog
+++ b/x11-themes/gtk-engines-begtk/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-begtk
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-begtk/ChangeLog,v 1.16 2005/10/02 19:39:56 agriffis Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-begtk/ChangeLog,v 1.17 2006/02/02 17:14:41 blubb Exp $
+
+  02 Feb 2006; Simon Stelling <blubb@gentoo.org>
+  gtk-engines-begtk-1.0.1-r2.ebuild:
+  stable on amd64
 
   02 Oct 2005; Aron Griffis <agriffis@gentoo.org>
   gtk-engines-begtk-1.0.1-r2.ebuild:
