--- a/x11-themes/gtk-engines-lighthouseblue/ChangeLog
+++ b/x11-themes/gtk-engines-lighthouseblue/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-lighthouseblue
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-lighthouseblue/ChangeLog,v 1.15 2005/09/12 23:05:06 hansmi Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-lighthouseblue/ChangeLog,v 1.16 2006/02/02 17:18:06 blubb Exp $
+
+  02 Feb 2006; Simon Stelling <blubb@gentoo.org>
+  gtk-engines-lighthouseblue-0.6.3.ebuild:
+  stable on amd64
 
   12 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
   gtk-engines-lighthouseblue-0.6.3.ebuild:
