--- a/x11-themes/gtk-engines-mac2/ChangeLog
+++ b/x11-themes/gtk-engines-mac2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-mac2
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-mac2/ChangeLog,v 1.15 2005/09/17 10:19:03 agriffis Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-mac2/ChangeLog,v 1.16 2006/02/02 17:11:57 blubb Exp $
+
+  02 Feb 2006; Simon Stelling <blubb@gentoo.org>
+  gtk-engines-mac2-1.0.3-r2.ebuild:
+  stable on amd64
 
   17 Sep 2005; Aron Griffis <agriffis@gentoo.org>
   gtk-engines-mac2-1.0.3-r2.ebuild:
