--- a/x11-themes/gtk-engines-thinice/ChangeLog
+++ b/x11-themes/gtk-engines-thinice/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-thinice
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-thinice/ChangeLog,v 1.23 2005/09/17 10:20:38 agriffis Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-thinice/ChangeLog,v 1.24 2006/02/02 17:18:44 blubb Exp $
+
+  02 Feb 2006; Simon Stelling <blubb@gentoo.org>
+  gtk-engines-thinice-1.0.4-r1.ebuild:
+  stable on amd64
 
   17 Sep 2005; Aron Griffis <agriffis@gentoo.org>
   gtk-engines-thinice-1.0.4-r1.ebuild:
