--- a/sci-libs/libgdgeda/ChangeLog
+++ b/sci-libs/libgdgeda/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/libgdgeda
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/libgdgeda/ChangeLog,v 1.5 2006/01/22 14:33:00 plasmaroo Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/libgdgeda/ChangeLog,v 1.6 2006/02/02 19:04:30 wormo Exp $
+
+  02 Feb 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
+  libgdgeda-2.0.15.ebuild:
+  stabling on ppc with plasmaroo's OK (Bug #120148)
 
   22 Jan 2006; <plasmaroo@gentoo.org> libgdgeda-2.0.15.ebuild:
   Port over to modular X.
