--- a/media-sound/alsa-driver/ChangeLog
+++ b/media-sound/alsa-driver/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/alsa-driver
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.198 2006/02/02 09:38:27 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.199 2006/02/02 19:16:53 flameeyes Exp $
+
+  02 Feb 2006; Diego Pettenò <flameeyes@gentoo.org>
+  alsa-driver-1.0.11_rc3.ebuild:
+  Drop CONFIG_PM_LEGACY check (bug #121329).
 
 *alsa-driver-1.0.11_rc3 (02 Feb 2006)
 
