--- a/www-apps/zina/ChangeLog
+++ b/www-apps/zina/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/zina
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/zina/ChangeLog,v 1.1 2006/01/11 09:11:13 wrobel Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/zina/ChangeLog,v 1.2 2006/02/02 19:14:00 wrobel Exp $
+
+  02 Feb 2006; <wrobel@gentoo.org> metadata.xml:
+  Modified maintainer
 
 *zina-0.12.10 (11 Jan 2006)
 
