--- a/dev-python/twisted-docs/ChangeLog
+++ b/dev-python/twisted-docs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/twisted-docs
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-docs/ChangeLog,v 1.18 2006/01/31 21:07:15 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-docs/ChangeLog,v 1.19 2006/02/02 19:30:11 marienz Exp $
+
+  02 Feb 2006; Marien Zwart <marienz@gentoo.org> Manifest:
+  Fix rmd160 digests.
 
   31 Jan 2006; Aron Griffis <agriffis@gentoo.org> twisted-docs-1.3.0.ebuild:
   Mark 1.3.0 stable on alpha/ia64
