--- a/net-zope/zopeinterface/ChangeLog
+++ b/net-zope/zopeinterface/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-zope/zopeinterface
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zopeinterface/ChangeLog,v 1.12 2006/01/31 20:41:40 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zopeinterface/ChangeLog,v 1.13 2006/02/02 19:32:31 marienz Exp $
+
+  02 Feb 2006; Marien Zwart <marienz@gentoo.org> Manifest:
+  Fix rmd160 digests.
 
   31 Jan 2006; Aron Griffis <agriffis@gentoo.org>
   zopeinterface-3.0.1.ebuild:
