--- a/media-libs/libmpcdec/ChangeLog
+++ b/media-libs/libmpcdec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libmpcdec
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpcdec/ChangeLog,v 1.6 2005/12/13 18:09:56 cryos Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpcdec/ChangeLog,v 1.7 2006/02/02 19:41:25 corsair Exp $
+
+  02 Feb 2006; Markus Rothe <corsair@gentoo.org> libmpcdec-1.2.ebuild:
+  Added ~ppc64
 
   13 Dec 2005; Marcus D. Hanwell <cryos@gentoo.org> libmpcdec-1.2.ebuild:
   Stable on amd64.
