--- a/gnome-base/gail/ChangeLog
+++ b/gnome-base/gail/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gail
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gail/ChangeLog,v 1.98 2006/02/02 13:45:40 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gail/ChangeLog,v 1.99 2006/02/02 20:02:31 agriffis Exp $
+
+  02 Feb 2006; Aron Griffis <agriffis@gentoo.org> gail-1.8.8.ebuild:
+  Mark 1.8.8 stable on alpha
 
   02 Feb 2006; Aron Griffis <agriffis@gentoo.org> gail-1.8.8.ebuild:
   Mark 1.8.8 stable on ia64
