--- a/net-analyzer/mwcollect/ChangeLog
+++ b/net-analyzer/mwcollect/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/mwcollect
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/mwcollect/ChangeLog,v 1.8 2005/12/20 16:44:06 chriswhite Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/mwcollect/ChangeLog,v 1.9 2006/02/02 20:05:53 chriswhite Exp $
+
+*mwcollect-3.0.3 (02 Feb 2006)
+
+  02 Feb 2006; Chris White <chriswhite@gentoo.org> +mwcollect-3.0.3.ebuild:
+  Version bump to 3.0.3.
 
 *mwcollect-3.0.2 (20 Dec 2005)
 
