--- a/net-misc/lsh/ChangeLog
+++ b/net-misc/lsh/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/lsh
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/lsh/ChangeLog,v 1.9 2006/02/02 01:27:31 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/lsh/ChangeLog,v 1.10 2006/02/02 20:49:42 wormo Exp $
+
+  02 Feb 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
+  lsh-2.0.1-r2.ebuild:
+  mark ppc stable (Bug #119966)
 
   02 Feb 2006; Mike Frysinger <vapier@gentoo.org> lsh-2.0.1.ebuild,
   lsh-2.0.1-r1.ebuild, +lsh-2.0.1-r2.ebuild:
