--- a/app-text/cabocha/ChangeLog
+++ b/app-text/cabocha/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-text/cabocha
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/cabocha/ChangeLog,v 1.1 2005/05/22 16:54:31 usata Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/cabocha/ChangeLog,v 1.2 2006/02/02 22:48:09 usata Exp $
+
+*cabocha-0.53 (02 Feb 2006)
+
+  02 Feb 2006; Mamoru KOMACHI <usata@gentoo.org>
+  +files/cabocha-0.52-amd64.patch, cabocha-0.52.ebuild,
+  +cabocha-0.53.ebuild:
+  Version bumped. Backported amd64 patch.
 
 *cabocha-0.52 (22 May 2005)
 
