--- a/sci-libs/libgeda/ChangeLog
+++ b/sci-libs/libgeda/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/libgeda
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/libgeda/ChangeLog,v 1.9 2006/02/02 19:08:53 wormo Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/libgeda/ChangeLog,v 1.10 2006/02/02 23:05:51 plasmaroo Exp $
+
+  02 Feb 2006; <plasmaroo@gentoo.org> libgeda-20050313.ebuild,
+  libgeda-20050820.ebuild:
+  Port over to modular X.
 
   02 Feb 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
   libgeda-20050820.ebuild:
