--- a/gnome-extra/gnome-keyring-manager/ChangeLog
+++ b/gnome-extra/gnome-keyring-manager/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome-keyring-manager
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-keyring-manager/ChangeLog,v 1.12 2006/01/22 20:13:32 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-keyring-manager/ChangeLog,v 1.13 2006/02/02 23:46:08 agriffis Exp $
+
+  02 Feb 2006; Aron Griffis <agriffis@gentoo.org>
+  gnome-keyring-manager-2.12.0.ebuild:
+  Mark 2.12.0 stable on alpha
 
   22 Jan 2006; <dang@gentoo.org> gnome-keyring-manager-2.12.0.ebuild:
   Marked stable on amd64 per bug #119634
