--- a/mail-client/mozilla-thunderbird/ChangeLog
+++ b/mail-client/mozilla-thunderbird/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/mozilla-thunderbird
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.99 2006/01/12 07:31:21 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.100 2006/02/03 00:11:52 lu_zero Exp $
+
+  02 Feb 2006; Luca Barbato <lu_zero@gentoo.org>
+  mozilla-thunderbird-1.5-r1.ebuild:
+  Marked ~ppc
 
 *mozilla-thunderbird-1.5 (12 Jan 2006)
 
