--- a/net-misc/lsh/ChangeLog
+++ b/net-misc/lsh/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/lsh
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/lsh/ChangeLog,v 1.10 2006/02/02 20:49:42 wormo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/lsh/ChangeLog,v 1.11 2006/02/03 03:47:14 tsunam Exp $
+
+  03 Feb 2006; Joshua Jackson <tsunam@gentoo.org> lsh-2.0.1-r2.ebuild:
+  stable on x86; bug #119966 as well
 
   02 Feb 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
   lsh-2.0.1-r2.ebuild:
