--- a/net-irc/xchat-xsys/ChangeLog
+++ b/net-irc/xchat-xsys/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/xchat-xsys
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat-xsys/ChangeLog,v 1.36 2006/01/05 14:35:17 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat-xsys/ChangeLog,v 1.37 2006/02/03 06:39:38 tsunam Exp $
+
+  03 Feb 2006; Joshua Jackson <tsunam@gentoo.org>
+  xchat-xsys-2.0.8-r1.ebuild:
+  Stable on x86;bug #117628
 
   05 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   xchat-xsys-2.0.8-r1.ebuild:
