--- a/dev-lisp/cl-puri/ChangeLog
+++ b/dev-lisp/cl-puri/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-lisp/cl-puri
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-puri/ChangeLog,v 1.10 2005/05/24 18:48:34 mkennedy Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-puri/ChangeLog,v 1.11 2006/02/03 08:47:47 mkennedy Exp $
+
+*cl-puri-1.4 (03 Feb 2006)
+
+  03 Feb 2006; Matthew Kennedy <mkennedy@gentoo.org> +cl-puri-1.4.ebuild:
+  New upstream version.
 
   24 May 2005; <mkennedy@gentoo.org> cl-puri-1.3.1.1.ebuild:
   Keywording ~sparc
