--- a/kde-base/kpdf/ChangeLog
+++ b/kde-base/kpdf/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kpdf
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kpdf/ChangeLog,v 1.71 2006/02/03 00:54:13 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kpdf/ChangeLog,v 1.72 2006/02/03 09:04:50 flameeyes Exp $
+
+*kpdf-3.5.1-r2 (03 Feb 2006)
+
+  03 Feb 2006; Diego Pettenò <flameeyes@gentoo.org> +kpdf-3.5.1-r2.ebuild:
+  Add patch (refined from KUbuntu) to use poppler instead of using internal
+  xpdf code.
 
 *kpdf-3.5.1-r1 (03 Feb 2006)
 *kpdf-3.4.3-r4 (03 Feb 2006)
