--- a/kde-base/kdegraphics/ChangeLog
+++ b/kde-base/kdegraphics/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for kde-base/kdegraphics
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdegraphics/ChangeLog,v 1.228 2006/02/03 00:58:09 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdegraphics/ChangeLog,v 1.229 2006/02/03 09:06:50 flameeyes Exp $
+
+*kdegraphics-3.5.1-r2 (03 Feb 2006)
+
+  03 Feb 2006; Diego Pettenò <flameeyes@gentoo.org>
+  +kdegraphics-3.5.1-r2.ebuild:
+  Add patch (refined from KUbuntu) to use poppler instead of using internal
+  xpdf code. Fix error message for poppler-bindings built without qt.
 
 *kdegraphics-3.5.1-r1 (03 Feb 2006)
 *kdegraphics-3.4.3-r4 (03 Feb 2006)
