--- a/net-wireless/hostap-driver/ChangeLog
+++ b/net-wireless/hostap-driver/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-wireless/hostap-driver
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/hostap-driver/ChangeLog,v 1.51 2006/01/02 18:13:36 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/hostap-driver/ChangeLog,v 1.52 2006/02/03 10:07:03 brix Exp $
+
+  03 Feb 2006; Henrik Brix Andersen <brix@gentoo.org>
+  -files/hostap-driver-0.3.7-firmware.patch,
+  -files/hostap-driver-0.3.9-firmware.patch,
+  -files/hostap-driver-0.4.5-firmware.patch, -hostap-driver-0.3.7.ebuild,
+  -hostap-driver-0.3.9.ebuild, -hostap-driver-0.4.5.ebuild:
+  Pruned old ebuilds.
 
   02 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
   hostap-driver-0.4.7.ebuild:
