--- a/sci-libs/root/ChangeLog
+++ b/sci-libs/root/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/root
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/root/ChangeLog,v 1.9 2005/07/28 21:02:26 caleb Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/root/ChangeLog,v 1.10 2006/02/03 11:07:46 phosphan Exp $
+
+  03 Feb 2006; Patrick Kursawe <phosphan@gentoo.org> root-3.05.04.ebuild,
+  root-3.10.02-r1.ebuild, root-4.02.00.ebuild:
+  Porting to modular X
 
   28 Jul 2005; Caleb Tennis <caleb@gentoo.org> root-3.10.02-r1.ebuild,
   root-4.02.00.ebuild:
