--- a/kde-base/kdegraphics/ChangeLog
+++ b/kde-base/kdegraphics/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdegraphics
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdegraphics/ChangeLog,v 1.229 2006/02/03 09:06:50 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdegraphics/ChangeLog,v 1.230 2006/02/03 13:44:10 weeve Exp $
+
+  03 Feb 2006; Jason Wever <weeve@gentoo.org> kdegraphics-3.4.3-r4.ebuild:
+  Stable on SPARC wrt security bug #121375.
 
 *kdegraphics-3.5.1-r2 (03 Feb 2006)
 
