--- a/gnome-extra/gnome-keyring-manager/ChangeLog
+++ b/gnome-extra/gnome-keyring-manager/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome-keyring-manager
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-keyring-manager/ChangeLog,v 1.13 2006/02/02 23:46:08 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-keyring-manager/ChangeLog,v 1.14 2006/02/03 14:26:42 gmsoft Exp $
+
+  03 Feb 2006; Guy Martin <gmsoft@gentoo.org>
+  gnome-keyring-manager-2.12.0.ebuild:
+  Stable on hppa.
 
   02 Feb 2006; Aron Griffis <agriffis@gentoo.org>
   gnome-keyring-manager-2.12.0.ebuild:
