--- a/sys-fs/cryptsetup-luks/ChangeLog
+++ b/sys-fs/cryptsetup-luks/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/cryptsetup-luks
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/cryptsetup-luks/ChangeLog,v 1.20 2006/02/02 16:37:05 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/cryptsetup-luks/ChangeLog,v 1.21 2006/02/03 14:46:28 gmsoft Exp $
+
+  03 Feb 2006; Guy Martin <gmsoft@gentoo.org>
+  cryptsetup-luks-1.0.1-r1.ebuild:
+  Stable on hppa.
 
   02 Feb 2006; Aron Griffis <agriffis@gentoo.org>
   cryptsetup-luks-1.0.1-r1.ebuild:
