--- a/gnome-base/gnome-volume-manager/ChangeLog
+++ b/gnome-base/gnome-volume-manager/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-volume-manager
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-volume-manager/ChangeLog,v 1.46 2006/01/22 23:15:02 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-volume-manager/ChangeLog,v 1.47 2006/02/03 14:56:15 gmsoft Exp $
+
+  03 Feb 2006; Guy Martin <gmsoft@gentoo.org>
+  gnome-volume-manager-1.5.4.ebuild:
+  Stable on hppa.
 
   22 Jan 2006; Markus Rothe <corsair@gentoo.org>
   gnome-volume-manager-1.5.4.ebuild:
