--- a/x11-wm/aewm++-goodies/ChangeLog
+++ b/x11-wm/aewm++-goodies/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/aewm++-goodies
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/aewm++-goodies/ChangeLog,v 1.8 2005/06/30 18:16:13 josejx Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/aewm++-goodies/ChangeLog,v 1.9 2006/02/03 15:02:20 nelchael Exp $
+
+  03 Feb 2006; Krzysiek Pawlik <nelchael@gentoo.org>
+  aewm++-goodies-1.0.ebuild:
+  Fixed DEPEND for modular X.
 
   30 Jun 2005; Joseph Jezak <josejx@gentoo.org> aewm++-goodies-1.0.ebuild:
   Marked ppc stable for bug #97512. Thanks nixnut.
