--- a/gnome-extra/libgnomedb/ChangeLog
+++ b/gnome-extra/libgnomedb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/libgnomedb
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomedb/ChangeLog,v 1.44 2005/12/26 15:48:05 kloeri Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomedb/ChangeLog,v 1.45 2006/02/03 15:03:56 agriffis Exp $
+
+  03 Feb 2006; Aron Griffis <agriffis@gentoo.org> libgnomedb-1.2.2.ebuild:
+  Mark 1.2.2 stable on alpha
 
   26 Dec 2005; Bryan Østergaard <kloeri@gentoo.org libgnomedb-1.2.2.ebuild:
   ~alpha keyword.
