--- a/sys-kernel/mm-sources/ChangeLog
+++ b/sys-kernel/mm-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/mm-sources
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.259 2006/01/30 03:05:48 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.260 2006/02/03 15:23:14 voxus Exp $
+
+*mm-sources-2.6.16_rc1-r5 (03 Feb 2006)
+
+  03 Feb 2006; Konstantin Arkhipov <voxus@gentoo.org>
+  +mm-sources-2.6.16_rc1-r5.ebuild:
+  Bump.
 
 *mm-sources-2.6.16_rc1-r4 (30 Jan 2006)
 
