--- a/kde-base/kdegraphics/ChangeLog
+++ b/kde-base/kdegraphics/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdegraphics
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdegraphics/ChangeLog,v 1.230 2006/02/03 13:44:10 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdegraphics/ChangeLog,v 1.231 2006/02/03 16:29:53 carlo Exp $
+
+  03 Feb 2006; Carsten Lohrke <carlo@gentoo.org>
+  kdegraphics-3.5.1-r2.ebuild:
+  We need poppler-bindings 0.5.
 
   03 Feb 2006; Jason Wever <weeve@gentoo.org> kdegraphics-3.4.3-r4.ebuild:
   Stable on SPARC wrt security bug #121375.
