--- a/kde-base/kpdf/ChangeLog
+++ b/kde-base/kpdf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kpdf
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kpdf/ChangeLog,v 1.73 2006/02/03 13:43:02 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kpdf/ChangeLog,v 1.74 2006/02/03 16:32:15 carlo Exp $
+
+  03 Feb 2006; Carsten Lohrke <carlo@gentoo.org> kpdf-3.5.1-r2.ebuild:
+  We need poppler-bindings 0.5.
 
   03 Feb 2006; Jason Wever <weeve@gentoo.org> kpdf-3.4.3-r4.ebuild:
   Stable on SPARC wrt security bug #121375.
