--- a/gnome-extra/nautilus-cd-burner/ChangeLog
+++ b/gnome-extra/nautilus-cd-burner/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/nautilus-cd-burner
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-cd-burner/ChangeLog,v 1.114 2006/02/02 02:48:45 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-cd-burner/ChangeLog,v 1.115 2006/02/03 16:28:49 gmsoft Exp $
+
+  03 Feb 2006; Guy Martin <gmsoft@gentoo.org>
+  nautilus-cd-burner-2.12.2.ebuild:
+  Stable on hppa.
 
   02 Feb 2006; Aron Griffis <agriffis@gentoo.org>
   nautilus-cd-burner-2.12.2.ebuild:
