--- a/gnome-base/eel/ChangeLog
+++ b/gnome-base/eel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/eel
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.136 2006/02/03 16:05:08 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.137 2006/02/03 17:05:41 gmsoft Exp $
+
+  03 Feb 2006; Guy Martin <gmsoft@gentoo.org> eel-2.12.2.ebuild:
+  Stable on hppa.
 
   03 Feb 2006; Aron Griffis <agriffis@gentoo.org> eel-2.12.2.ebuild:
   Mark 2.12.2 stable on alpha
