--- a/dev-php5/pecl-crack/ChangeLog
+++ b/dev-php5/pecl-crack/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php5/pecl-crack
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-crack/ChangeLog,v 1.8 2005/11/26 23:21:35 chtekk Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-crack/ChangeLog,v 1.9 2006/02/03 17:32:50 nixnut Exp $
+
+  03 Feb 2006; <nixnut@gentoo.org> pecl-crack-0.3.ebuild:
+  Added ~ppc keyword. bug 121024
 
   26 Nov 2005; Luca Longinotti <chtekk@gentoo.org> pecl-crack-0.2.ebuild,
   pecl-crack-0.3.ebuild:
