--- a/kde-base/kicker/ChangeLog
+++ b/kde-base/kicker/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kicker
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kicker/ChangeLog,v 1.38 2006/01/22 22:53:00 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kicker/ChangeLog,v 1.39 2006/02/03 17:38:23 carlo Exp $
+
+*kicker-3.5.1-r1 (03 Feb 2006)
+
+  03 Feb 2006; Carsten Lohrke <carlo@gentoo.org>
+  +files/kdebase-3.5.1-kicker.patch, +kicker-3.5.1-r1.ebuild:
+  Kicker anti-flicker patch, #121444.
 
 *kicker-3.5.1 (23 Jan 2006)
 
