--- a/kde-base/kxkb/ChangeLog
+++ b/kde-base/kxkb/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kxkb
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kxkb/ChangeLog,v 1.40 2006/01/22 22:53:09 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kxkb/ChangeLog,v 1.41 2006/02/03 17:39:42 carlo Exp $
+
+*kxkb-3.5.1-r1 (03 Feb 2006)
+
+  03 Feb 2006; Carsten Lohrke <carlo@gentoo.org>
+  +files/kxkb3.5.1.xx_XX_layouts.patch, +kxkb-3.5.1-r1.ebuild:
+  Load keyboard layouts with uppercase letters, #121444.
 
 *kxkb-3.5.1 (23 Jan 2006)
 
