--- a/kde-base/kdebase/ChangeLog
+++ b/kde-base/kdebase/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.257 2006/01/30 01:01:04 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.258 2006/02/03 17:47:28 carlo Exp $
+
+*kdebase-3.5.1-r1 (03 Feb 2006)
+
+  03 Feb 2006; Carsten Lohrke <carlo@gentoo.org>
+  +files/kxkb3.5.1.xx_XX_layouts.patch, +files/kdebase-3.5.1-kicker.patch,
+  +kdebase-3.5.1-r1.ebuild:
+  Patches to fix #121369 and #121444.
 
   30 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
   kdebase-3.3.2-r1.ebuild, kdebase-3.3.2-r2.ebuild, kdebase-3.3.2-r3.ebuild,
