--- a/app-accessibility/gnopernicus/ChangeLog
+++ b/app-accessibility/gnopernicus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/gnopernicus
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/gnopernicus/ChangeLog,v 1.75 2006/01/25 02:34:49 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/gnopernicus/ChangeLog,v 1.76 2006/02/03 18:11:12 gmsoft Exp $
+
+  03 Feb 2006; Guy Martin <gmsoft@gentoo.org> gnopernicus-0.12.0.ebuild:
+  Stable on hppa.
 
   25 Jan 2006; Donnie Berkholz <spyderous@gentoo.org>;
   gnopernicus-0.12.0.ebuild:
