--- a/x11-base/x11-drm/ChangeLog
+++ b/x11-base/x11-drm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-base/x11-drm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/x11-drm/ChangeLog,v 1.27 2006/01/28 21:56:26 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/x11-drm/ChangeLog,v 1.28 2006/02/03 18:24:48 spyderous Exp $
+
+  03 Feb 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  x11-drm-20051223.ebuild:
+  Fix up VIDEO_CARDS naming and use to be consistent with xorg-x11.
 
   28 Jan 2006; Donnie Berkholz <spyderous@gentoo.org>;
   x11-drm-20051223.ebuild:
