--- a/dev-lisp/cl-aspectl/ChangeLog
+++ b/dev-lisp/cl-aspectl/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-lisp/cl-aspectl
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-aspectl/ChangeLog,v 1.7 2005/05/24 18:48:32 mkennedy Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-aspectl/ChangeLog,v 1.8 2006/02/03 18:26:41 mkennedy Exp $
+
+*cl-aspectl-0.70 (03 Feb 2006)
+
+  03 Feb 2006; Matthew Kennedy <mkennedy@gentoo.org>
+  +cl-aspectl-0.70.ebuild:
+  New upstream version.
 
   24 May 2005; <mkennedy@gentoo.org> cl-aspectl-0.6.4.ebuild:
   Keywording ~sparc
