--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.160 2006/01/22 21:58:45 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.161 2006/02/03 19:09:24 agriffis Exp $
+
+  03 Feb 2006; Aron Griffis <agriffis@gentoo.org>
+  control-center-2.12.2-r1.ebuild:
+  Mark 2.12.2-r1 stable on alpha.  Stop using the alpha hack patch since gcc PR
+  9700 has been fixed since gcc-3.3.x
 
   22 Jan 2006; Markus Rothe <corsair@gentoo.org>
   control-center-2.12.2-r1.ebuild:
