--- a/mail-client/pine/ChangeLog
+++ b/mail-client/pine/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for mail-client/pine
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/pine/ChangeLog,v 1.77 2005/10/12 14:58:21 josejx Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/mail-client/pine/ChangeLog,v 1.78 2006/02/03 19:22:10 ticho Exp $
+
+*pine-4.64-r2 (03 Feb 2006)
+
+  03 Feb 2006; Andrej Kacian <ticho@gentoo.org> +pine-4.64-r2.ebuild:
+  Updated chappa-all patch.
 
   12 Oct 2005; Joseph Jezak <josejx@gentoo.org> pine-4.64-r1.ebuild:
   Marked ppc stable for bug #108647.
