--- a/dev-tinyos/nesc/ChangeLog
+++ b/dev-tinyos/nesc/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-tinyos/nesc
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tinyos/nesc/ChangeLog,v 1.4 2006/02/02 20:46:09 sanchan Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tinyos/nesc/ChangeLog,v 1.5 2006/02/03 19:22:37 sanchan Exp $
+
+*nesc-1.2.4 (03 Feb 2006)
+
+  03 Feb 2006; Sandro Bonazzola <sanchan@gentoo.org> +nesc-1.2.4.ebuild:
+  Version bump. Bugfix release.
 
 *nesc-1.2.3 (02 Feb 2006)
 
