--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.161 2006/02/03 19:09:24 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.162 2006/02/03 19:31:58 agriffis Exp $
+
+  03 Feb 2006; Aron Griffis <agriffis@gentoo.org>
+  control-center-2.12.2-r1.ebuild:
+  Mark 2.12.2-r1 stable on ia64
 
   03 Feb 2006; Aron Griffis <agriffis@gentoo.org>
   control-center-2.12.2-r1.ebuild:
