--- a/dev-php4/jpgraph/ChangeLog
+++ b/dev-php4/jpgraph/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php4/jpgraph
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php4/jpgraph/ChangeLog,v 1.4 2006/02/01 18:12:46 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php4/jpgraph/ChangeLog,v 1.5 2006/02/03 20:06:52 nixnut Exp $
+
+  03 Feb 2006; <nixnut@gentoo.org> jpgraph-1.19.ebuild:
+  Added ~ppc keyword. bug 121023
 
   01 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org> jpgraph-1.19.ebuild:
   Keyworded ~sparc wrt #121023
