--- a/media-sound/museseq/ChangeLog
+++ b/media-sound/museseq/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/museseq
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/museseq/ChangeLog,v 1.36 2006/01/28 18:49:56 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/museseq/ChangeLog,v 1.37 2006/02/03 22:01:52 fvdpol Exp $
+
+  03 Feb 2006; Frank van de Pol <fvdpol@gentoo.org>
+  museseq-0.7.2_pre5.ebuild:
+  fixed homepage url
 
   28 Jan 2006; Simon Stelling <blubb@gentoo.org>
   +files/museseq-0.6.2-int2ptr.patch, -files/museseq-0.6.2-int2ptr.patch.gz,
