--- a/gnome-extra/hal-device-manager/ChangeLog
+++ b/gnome-extra/hal-device-manager/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/hal-device-manager
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/hal-device-manager/ChangeLog,v 1.8 2006/01/20 23:14:32 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/hal-device-manager/ChangeLog,v 1.9 2006/02/03 22:21:19 agriffis Exp $
+
+  03 Feb 2006; Aron Griffis <agriffis@gentoo.org>
+  hal-device-manager-0.5.ebuild:
+  Mark 0.5 stable on ia64
 
   20 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   hal-device-manager-0.5.ebuild:
