--- a/net-analyzer/sara/ChangeLog
+++ b/net-analyzer/sara/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/sara
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/ChangeLog,v 1.17 2006/01/20 19:26:40 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/ChangeLog,v 1.18 2006/02/03 22:40:18 vanquirius Exp $
+
+  03 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> sara-6.0.4.ebuild,
+  sara-6.0.7d.ebuild:
+  Depend on tcsh-6.14-r3 to fix bug 119426 regarding missing csh. Thanks to
+  Erol Kutay <ekutay at goldmail dot de> and Fabian Groffen <grobian at gentoo
+  dot org>.
 
   20 Jan 2006; Peter Volkov <pva@gentoo.org> sara-6.0.4.ebuild,
   sara-6.0.7d.ebuild:
