--- a/media-plugins/mythmusic/ChangeLog
+++ b/media-plugins/mythmusic/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/mythmusic
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/ChangeLog,v 1.75 2008/06/02 16:03:57 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/ChangeLog,v 1.76 2008/08/01 16:41:33 cardoe Exp $
+
+  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml,
+  -mythmusic-0.21_p16468.ebuild:
+  add GLEP 56 USE flag desc from use.local.desc
 
   02 Jun 2008; Doug Goldstein <cardoe@gentoo.org>
   mythmusic-0.20.2_p14282.ebuild:
