--- a/media-plugins/mythphone/ChangeLog
+++ b/media-plugins/mythphone/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/mythphone
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythphone/ChangeLog,v 1.29 2008/04/23 18:17:27 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythphone/ChangeLog,v 1.30 2008/08/01 16:45:07 cardoe Exp $
+
+  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  add GLEP 56 USE flag desc from use.local.desc
 
 *mythphone-0.21_p17105 (23 Apr 2008)
 
