add GLEP 56 USE flag desc from use.local.desc Package-Manager: portage-2.2_rc5/cvs/Linux 2.6.25-gentoo-r5 x86_64

--- a/media-plugins/gimp-greycstoration/ChangeLog
+++ b/media-plugins/gimp-greycstoration/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/gimp-greycstoration
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-greycstoration/ChangeLog,v 1.4 2008/06/18 09:11:28 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-greycstoration/ChangeLog,v 1.5 2008/08/01 17:05:01 cardoe Exp $
+
+  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  add GLEP 56 USE flag desc from use.local.desc
 
 *gimp-greycstoration-2.9 (18 Jun 2008)
 
