Added moinmoin-1.7.1 wrt sec issue #233560. Package-Manager: portage-2.1.4.4

--- a/www-apps/moinmoin/ChangeLog
+++ b/www-apps/moinmoin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-apps/moinmoin
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/ChangeLog,v 1.47 2008/04/28 18:11:18 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/ChangeLog,v 1.48 2008/08/01 17:19:11 wrobel Exp $
+
+*moinmoin-1.7.1 (01 Aug 2008)
+
+  01 Aug 2008; wrobel@gentoo.org +files/reconfig-3, -moinmoin-1.6.1.ebuild,
+  +moinmoin-1.7.1.ebuild:
+  Added moinmoin-1.7.1 wrt sec issue #233560.
 
   28 Apr 2008; Raúl Porcel <armin76@gentoo.org> moinmoin-1.6.3.ebuild:
   sparc stable wrt security #218752
