--- a/media-plugins/gst-plugins-meta/ChangeLog
+++ b/media-plugins/gst-plugins-meta/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/gst-plugins-meta
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-meta/ChangeLog,v 1.16 2008/07/31 18:46:46 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-meta/ChangeLog,v 1.17 2008/08/01 19:25:44 cardoe Exp $
+
+  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  add GLEP 56 USE flag desc from use.local.desc
 
   31 Jul 2008; Raúl Porcel <armin76@gentoo.org>
   gst-plugins-meta-0.10-r2.ebuild:
